# attendance_system

./: .coveragerc  .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART_UPGRADE.md  README.md  SETUP.md  TECHNICAL_REVIEW.md  anti_spoofing.py  app.py  camera.py  celery_app.py  config.py  database.py  debug_pipeline.py  docker-compose.yml  face_engine.py  gunicorn.conf.py  liveness.py  nginx.conf  overlay.py  performance.py  pipeline.py  ppe_detection.py  pyproject.toml  recognition.py  requirements-docker.txt  requirements.txt  routes.py  run.py  run_admin.py  run_student.py  task.md  utils.py
AutoAttend/: implementation_plan.md  task.md
admin_app/: __init__.py  app.py  forms.py
anti_spoofing/: __init__.py  blink_detector.py  model.py  movement_checker.py  spoof_detector.py
app_camera/: camera.py
app_core/: auth.py  config.py  database.py  notifications.py  performance.py  utils.py
app_vision/: __init__.py  anti_spoofing.py  face_engine.py  overlay.py  pipeline.py  ppe_detection.py  preprocessing.py  recognition.py
app_web/: api_restx.py  attendance_routes.py  auth_routes.py  camera_routes.py  health_routes.py  notification_routes.py  ops_routes.py  overview_routes.py  public_routes.py  registration_routes.py  report_routes.py  routes.py  routes_helpers.py  student_routes.py
camera/: __init__.py  camera.py
core/: __init__.py  analytics_pipelines.py  auth.py  auth_config.py  config.py  database.py  extensions.py  metrics.py  models.py  notifications.py  onnx_utils.py  performance.py  profiling.py  security_logs.py  utils.py
docker/: Dockerfile  Dockerfile.admin  Dockerfile.student
docs/: ADVANCED_FEATURES.md  ANTI_SPOOFING.md  API_REFERENCE.md  APPENDIX.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  BACKEND.md  BENCHMARK_GUIDE.md  BUILD_GUIDE.md  CAMERA.md  COMPREHENSIVE_README.md  CONFIG_GUIDE.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FACE_RECOGNITION_TUNING.md  FAQ.md  FUTURE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  KUBERNETES_DEPLOYMENT.md  LIMITATIONS.md  OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_6_COMPLETION_SUMMARY.md  PIPELINE.md  README_RESEARCH.md  RESEARCH.md  RESULTS_AND_BENCHMARKS.md  SESSION_2_COMPLETION_SUMMARY.md  TESTING.md  THEORY.md  TROUBLESHOOTING.md
recognition/: __init__.py  aligner.py  config.py  detector.py  embedder.py  matcher.py  pipeline.py  tracker.py
requirements/: base.txt  cpu.txt  dev.txt  gpu.txt
scripts/: benchmark_ablation.py  benchmark_concurrency.py  benchmark_robustness.py  bootstrap_admin.py  calibrate_liveness_threshold.py  calibrate_ppe_threshold.py  clear_db.py  create_benchmark_dataset.py  debug_pipeline.py  migrate_encodings.py  migrate_to_vector_search.py  seed_demo_data.py  smoke_test.py  synthetic_face_generator.py  verify_upgrade.py  verify_versions.py
student_app/: __init__.py  app.py  auth.py  database.py  enrollment_validator.py  routes.py  verification.py
tasks/: __init__.py  celery_app.py  cleanup_tasks.py  embedding_tasks.py  report_tasks.py
templates/: admin_students.html  analytics_dashboard.html  attendance.html  attendance_activity.html  base.html  batch_register.html  dashboard.html  heatmap.html  index.html  login.html  logs.html  metrics.html  register.html  report.html  (+2 more)
(+214 files in other folders)
